--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,13 @@
 			<version>3.12.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.13.2</version>
+			<scope>test</scope>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.springdoc</groupId>
